package cars.Exo1;

public class Subaru extends Car {

    public Subaru() {
    }

    public String honk() {
        return "Klaxon : Turlututu !";
    }

    public String speedUp() {
        return "Acceleration : ZRRRRRRROUMMMMMMMMMM !";
    }
}
